[package]
name = "assault_cheat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
[dependencies]
toy-arms = "0.9.4"
windows = { version = "0.43.0", features = ["Win32_System_Console", "Win32_Foundation","Win32_UI_Input_KeyboardAndMouse","Win32_System_LibraryLoader"] }
